[package]
name = "subdomaingather"
version = "0.1.0"
edition = "2021"

[[bin]]
bench = false
path = "src/bin/main.rs"
name = "subdomaingather"

[dependencies]
reqwest = {version = "0.10.7", features = ["json", "gzip"]}
strum = "0.20"
strum_macros = "0.20"
matches = "0.1.8"
async-trait = "0.1.41"
crobat = {path = "./crobat" }
base64 = "0.12.3"
addr = "0.2.0"
clap = "2.33.1"
url = "2.1.1"
futures = "0.3.5"
futures-core = "0.3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tokio = { version = "0.2", features = ["sync", "rt-threaded", "macros"] }
tracing = {version = "0.1.19", features = ["attributes"]}
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.12"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
